[FIX] price suggestion overlapping container box

--- a/addons/wrtv_config_relaunch_v2/static/src/css/wrtv_relaunch_2.css
+++ b/addons/wrtv_config_relaunch_v2/static/src/css/wrtv_relaunch_2.css
@@ -185,6 +185,11 @@ h4#payment_intervals {
 
 div[itemprop="offers"] {
     order: -1;
+    overflow: hidden;
+}
+
+div[itemprop="offers"] input[type="button"] {
+    white-space: normal;
 }
 
 body .oe_website_sale .row .row .col-md-12 {
